kubernetes-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: whatsapp-dashboard
  namespace: hfh
  labels:
    app: hfh-wp-dash
spec:
  selector:
    app: hfh-wp-dash
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
  type: ClusterIP
